--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Spaghetti</h1>
-    <img src="../images/Spaghetti.jpg" alt="Spaghetti">
+    <img src="../images/Spaghetti.png" alt="Spaghetti">
     <p>Spaghetti is a delicious, easy to make meal created in Italy. 
         It consists of noodles, sauce, and occasionally meat.  
         It is a staple around the world because of its 
