--- a/recipes/friedchicken.html
+++ b/recipes/friedchicken.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>Fried Chicken</h1>
-    <img src="../images/FriedChicken.png" alt="Fried Chicken">
+    <img src="../Images/FriedChicken.png" alt="Fried Chicken">
     <p>Fried chicken, also known as Southern 
         fried chicken, is a dish consisting of 
         chicken pieces that have been coated with 
